--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,13 @@ server.port=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
  
 # DB Source URL
-spring.datasource.url=jdbc:mysql://localhost:3306/jinpring?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mysql://localhost:3306/study?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
  
 # DB username
 spring.datasource.username=root
  
 # DB password
-spring.datasource.password=fncpahs0728@
+spring.datasource.password=2404
  
 # true 설정시 JPA 쿼리문 확인 가능
 spring.jpa.show-sql=true
