--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/study?useSSL=false&useUnicode=
 spring.datasource.username=root
  
 # DB password
-spring.datasource.password=2404
+spring.datasource.password=fncpahs0728@
  
 # true 설정시 JPA 쿼리문 확인 가능
 spring.jpa.show-sql=true
