--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=1234
 
+# api 요청 시 cookie가 없을 때 url에 JSESSIONID 붙는 것 방지
+server.servlet.session.tracking-modes=cookie
+
 # MySQL 설정
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
  
